<resources>
    <string name="app_name">ARES App</string>

    <!--Tablas-->
    <string name="tablaEmpleadoUES">Tabla Empleado UES</string>
    <string name="tablaTipoDeEmpleado">Tabla Tipo de Empleado</string>
    <string name="tablaDocente">Tabla Docente</string>
    <string name="tablaLocalAdministrado">Tabla Local Administrado</string>
    <string name="tablaLocalidad">Tabla Localidad</string>
    <string name="tablaEventoEspecial">Tabla Evento Especial</string>
    <string name="tablaTipoEvento">Tabla Tipo Evento</string>
    <string name="tablaOpcionCrud">Tabla Opcion CRUD</string>
    <string name="tablaHorario">Tabla Horario</string>
    <string name="tablaUsuario">Tabla Usuario</string>
    <string name="tablaPropuestaEspecifica">Tabla Propuesta Específica</string>
    <string name="tablaPropuestaGeneral">Tabla Propuesta General</string>
    <string name="tablaGrupo">Tabla Grupo</string>
    <string name="tablaGrupoHorario">Tabla Grupo Horario</string>
    <string name="tablaMateria">Tabla Materia</string>
    <string name="tablaOfertaAcademica">Tabla Oferta Academica</string>
    <string name="tablaCiclo">Tabla Ciclo</string>
    <string name="tablaEscuela">Tabla Escuela</string>

    <!--Operaciones de cada tabla-->
    <string name="insertar_registro">Insertar Registro</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="eliminar">Eliminar</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="consultar">Consultar</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="actualizar">Actualizar</string>
    <string name="limpiar">Limpiar</string>
    <string name="guardar">Guardar</string>

    <!--Clase Controladora-->
    <string name="error">Error al insertar el registro. Registro Duplicado. Verificar inserción</string>
    <string name="error2">Digite un año entre 1900 y 2100</string>
    <string name="error3">El año y el #Ciclo deben ser unicos</string>
    <string name="error4">Ocurrio algo inesperado en la DB</string>
    <string name="regInsertado">Registro insertado Nº= </string>
    <string name="regActualizado">Registro actualizado correctamente</string>
    <string name="regNoActualizado">Registro no se actualizo, revise sus campos</string>
    <string name="regEliminados">Filas afectadas = </string>
    <string name="regNoEliminados">FALLO al eliminar, existe una relacion con </string>
    <string name="referencia">Hay una referencia en otra tabla de</string>
    <string name="llenadoBD">Guardo correctamente</string>
    <string name="elimGrupo">Grupo</string>
    <string name="elimOferta">Oferta Academica</string>
    <string name="elimMateria">Materia</string>


    <!--AlertDialog-->
    <string name="mensajeAlerta">¿Desea eliminar este registro?"</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="vacio">¡Llena todos los campos requeridos!</string>
    <string name="anioValido">¡El año debe ser valido!</string>

    <!--LoginActivity-->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>

    <!--MenuActivity-->
    <string name="bienvenida">Bienvenido,</string>
    <string name="logout">Cerrar sesión</string>
    <string name="serviciosWeb">Servicios Web</string>
    <string name="llenadoBaseDatos">LLenar base de datos</string>


    <!--TipoEmpleadoActivities-->
    <string name="tvIdTipoEmpleado">Id de tipo de empleado:</string>
    <string name="ocupacion">Ocupacion:</string>

    <!--DocenteActivities-->
    <string name="IdDocente">Id docente:</string>
    <string name="nipDocente">NIP docente:</string>
    <string name="categoria">Categoría:</string>

    <!--EmpleadoUESActivities-->
    <string name="IdEmpleado">Id empleado:</string>
    <string name="nombreEmpleado">Nombre de empleado:</string>
    <string name="apellidoEmpleado">Apellido de empleado:</string>
    <string name="emailEmpleado">Correo electrónico:</string>
    <string name="Telefono">Teléfono:</string>

    <!--OpcionCrudActivity-->
    <string name="IdOpcionCrud">Id opcion CRUD:</string>
    <string name="descripcionOpcionCrud">Descripción:</string>

    <!--Evento Especial Activity-->
    <string name="txtidEventoEspecial">Id Evento Especial:</string>
    <string name="txtViewidTipoEventoEspecial">Id Tipo de Evento:</string>
    <string name="txtViewNombreEventoEspecial">Nombre del Evento:</string>
    <string name="txtViewTipoEventoEspecial">Tipo de evento especial:</string>
    <string name="txtViewOrganizadorEvento">Id Organizador:</string>
    <string name="txtViewLocalidadEventoEspecial">Id Localidad:</string>
    <string name="txtViewFechaEventoEspecial">Fecha:</string>
    <string name="txtViewHorarioEventoEspecial">Id Horario:</string>

    <!--Localidad y Local Administrado Activity-->
    <string name="txtViewIdLocal">Id Local:</string>
    <string name="txtViewIdLocalAdmin">Id Local Administrado:</string>
    <string name="txtViewNombreLocal">Localidad:</string>
    <string name="txtViewCupoLocal">Capacidad:</string>
    <string name="txtViewEdificio">Edificio:</string>
    <string name="registro_no_encontrado">Registro no encontrado</string>
    <string-array name="spinnerEdificioLocal">
        <item>Auditorio Miguel Mármol</item>
        <item>Biblioteca FIA</item>
        <item>Edificio B</item>
        <item>Edificio C</item>
        <item>Edificio D</item>
        <item>Lab Ciencias Básicas</item>
        <item>Labcomp EISI</item>
    </string-array>

    <!--UsuarioActivity-->
    <string name="txtIdUsuario">Id Usuario:</string>
    <string name="txtNombreUsuario">Nombre:</string>
    <string name="txtPasswordUsuario">Contraseña:</string>
    <string name="txtOpcionesCrudUsuario">Permisos:</string>

    <!--LabelsHeader-->
    <string name="labelMenuFM19038">Tablas FM19038</string>
    <string name="labelCrudOpocion">CRUD Tabla Opciones Crud</string>
    <string name="labelCrudUsuario">CRUD Tabla Usuario</string>
    <string name="labelCrudPropositoEspcificico">CRUD Tabla Proposito General</string>
    <string name="labelCrudPropositoGeneral">CRUD Tabla Proposito Especifico</string>

    <!--PropuestaEspecificaActivity-->
    <string name="txtPropuetaGeneralPropuestaEspecifica">Propuesta General:</string>
    <string name="txtHorarioPropuestaEspecifica">Horario:</string>
    <string name="txtEstadoPropuestaEspecifica">Estado:</string>
    <string name="txtIdPropuestaEspecifica">Id propuesta especifica:</string>
    <string name="txtLocalidadPropuestaEspecifica">Localidad:</string>
    <string name="alertNoData">Debes rellenar un campo para actualizar</string>

    <!--PropuestaGeneralActivity-->
    <string name="txtSelectPropuestaEscifica">Propuestas Especificas</string>
    <string name="estadoAprobado">Aprobado</string>
    <string name="estadoDenegado">Denegado</string>
    <string name="estadoRevision">Revision</string>
    <string name="estadoParcialmente">Parcialmente Aprobada</string>
    <string name="btnCrear">Crear</string>


    <!--GrupoActivity-->
    <string name="idgrupo">ID del grupo:</string>
    <string name="idoferta">ID de la oferta académica:</string>
    <string name="numgrupo">Número del grupo:</string>
    <string name="cupo">Cupo:</string>
    <string name="tipogrupo">Tipo de grupo:</string>

    <!--HorarioActivity-->
    <string name="idhorario">ID del horario:</string>
    <string name="idevento">ID del evento:</string>
    <string name="horainicio">Hora de Inicio:</string>
    <string name="horafinalizacion">Hora de finalización:</string>

    <!--GrupoHorarioActivity-->
    <string name="idgh">ID del Grupo Horario:</string>

    <!--EscuelaActivity-->
    <string name="idEscuela">ID Escuela</string>
    <string name="acronimoEscuela">Acronimo</string>
    <string name="nombreEscuela">Nombre</string>

    <!--CicloActivity-->
    <string name="idCiclo">ID Ciclo:</string>
    <string name="cicloCiclo">Ciclo:</string>
    <string name="cicloAnio">Año:</string>

    <!--MateriaActivity-->
    <string name="idMateria">ID Materia:</string>
    <string name="codMateria">Cod Materia:</string>
    <string name="MateriaNombre">Nombre:</string>
    <string name="materiaEscuela">Escuela:</string>

    <!--OfertaActivity-->
    <string name="id_oferta">ID Oferta:</string>
    <string name="OfertaCiclo">Ciclo:</string>
    <string name="ofertaDocente">Docente:</string>
    <string name="OfertaMateria">Materia:</string>

    <!--Servicios web-->
    <string name="servicioWeb1">Actualizar Escuelas</string>
    <string name="servicioWeb2">Ingresar Escuela</string>
    <string name="servicioWeb3">Actualizar Localidades</string>
    <string name="servicioWeb4">Ingresar Localidad</string>
    <string name="servicioWeb5">Actualizar Ciclo</string>
    <string name="servicioWeb6">Ingresar Ciclo</string>
    <string name="servicioWeb7">Actualizar Opcion CRUD</string>
    <string name="servicioWeb8">Ingresar Opcion CRUD</string>
    <string name="servicio_PHPexterno">Servicio PHP Externo</string>
    <string name="servicio_PHPlocal">Servicio PHP Local</string>
    <string name="indicacion_actualizar">¿A partir de qué fecha desea actualizar?</string>
    <string name="formato_fecha">dd/mm/aaaa</string>
    <string name="el_formato">El formato debe ser </string>
    <string name="el_anio">El año debe ser entre 1900 y 2100</string>
    <string name="el_anio2">El año debe estar entre 1900 y 2100, el mes de 01 a 12 y el dia entre 01 y 31</string>
    <string name="no_hay">No hay registros por guardar</string>
    <string name="si_hay">Guardado con éxito</string>
    <string name="error_conexion">Error en la conexión</string>
    <string name="error_parseo">Error en parseo de JSON</string>
    <string name="reg_ingresado">Registro ingresado</string>
    <string name="reg_duplicado">Error de registro duplicado</string>




</resources>