<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_oferta"/>
        <EditText
            android:id="@+id/editIdOferta"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/OfertaCiclo" />
        <Spinner
            android:id="@+id/spinnerOfertaCiclo"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/ofertaDocente" />
        <Spinner
            android:id="@+id/spinnerOfertaDocente"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/OfertaMateria" />
        <Spinner
            android:id="@+id/spinnerOfertaMateria"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarOferta"
            android:text="@string/insertar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>