<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView
            android:text="@string/IdEmpleado"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editIdEmpleado"
            android:inputType="number"
            android:maxLength="4" />
    </TableRow>
    <TableRow>

        <TextView
            android:paddingHorizontal="10dip"
            android:text="@string/tvIdTipoEmpleado" />

        <Spinner
            android:id="@+id/spinnerIdTipoEmpleado"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/nombreEmpleado"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editNombreEmpleado"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/apellidoEmpleado"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editApellidoEmpleado"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/emailEmpleado"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editEmailEmpleado"
            android:inputType="textEmailAddress"
            android:maxLength="50" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/Telefono"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editTelefonoEmpleado"
            android:inputType="number"
            android:maxLength="8" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarEmpleadoUES"
            android:backgroundTint="#0a996f"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>