<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView
            android:text="@string/IdDocente"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editIdDocente"
            android:inputType="number"
            android:maxLength="4" />
    </TableRow>
    <TableRow>

        <TextView
            android:paddingHorizontal="10dip"
            android:text="@string/IdEmpleado" />

        <Spinner
            android:id="@+id/spinnerIdEmpleado"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/nipDocente"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editNipDocente"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/categoria"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editCategoria"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarDocente"
            android:backgroundTint="#0a996f"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>