<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView
            android:text="@string/txtIdUsuario"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editInsertarIdUsuario"
            android:inputType="text"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/txtNombreUsuario"
            android:paddingHorizontal="10dip"/>
        <EditText
            android:id="@+id/editInsertarNombreUsuario"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/txtPasswordUsuario"
            android:paddingHorizontal="10dip"/>
        <EditText
            android:id="@+id/editInsertaContraseñaUsuario"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/txtOpcionesCrudUsuario"
            android:paddingHorizontal="10dip"/>

        <Spinner
            android:id="@+id/spinOpcionCrudUsuario"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
    </TableRow>
    <TableRow>

        <Button
            android:backgroundTint="#0a996f"
            android:onClick="insertarUsuario"
            android:text="@string/insertar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>