<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">

    <TableRow>

        <TextView android:text="@string/idhorario" />

        <EditText
            android:id="@+id/editidgh"
            android:inputType="text"
            android:maxLength="7"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/idevento" />

        <EditText
            android:id="@+id/editidhorario"
            android:inputType="text"
            android:maxLength="30"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/horainicio" />

        <EditText
            android:id="@+id/editidgrupo5"
            android:inputType="text"
            android:maxLength="30"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/horafinalizacion" />

        <EditText
            android:id="@+id/edithorafin"
            android:inputType="text"
            android:maxLength="1"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </TableRow>


    <TableRow>

        <Button
            android:layout_width="171dp"
            android:onClick="actualizarHorario"
            android:text="@string/actualizar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
