<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView
            android:text="@string/txtPropuetaGeneralPropuestaEspecifica"
            android:paddingHorizontal="10dip"/>

        <Spinner
            android:id="@+id/spinPropuestaGeneralPropuestaEspecifica"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/txtHorarioPropuestaEspecifica"
            android:paddingHorizontal="10dip"/>
        <Spinner
            android:id="@+id/spinHorarioPropuestaEspecifica"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/txtViewLocalidadEventoEspecial"
            android:paddingHorizontal="10dip"/>
        <Spinner
            android:id="@+id/spinLocalidadPropuestaEspecifica"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
    </TableRow>
    <TableRow>

        <Button
            android:backgroundTint="#0a996f"
            android:onClick="insertarPropuestaEspecifica"
            android:text="@string/insertar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>