<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:paddingHorizontal="20dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView
            android:text="@string/tvIdTipoEmpleado"/>
        <EditText
            android:id="@+id/editIdTipoEmpleado"
            android:inputType="number"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/ocupacion" />
        <EditText
            android:id="@+id/editOcupacion"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarTipoEmpleado"
            android:backgroundTint="#0a996f"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
