<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="30dip"
    android:paddingHorizontal="10dip"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dip"
        android:text="@string/txtIdPropuestaEspecifica"/>

    <Spinner
        android:id="@+id/spinActualizarIdPropuestaEspecifica"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPropuetaGeneralPropuestaEspecifica" />
    <Spinner
        android:id="@+id/spinActualizarGeneralPropuestaEspecifica"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEstadoPropuestaEspecifica" />
    <Spinner
        android:id="@+id/spinActualizarEstadoPropuestaEspecifica"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtHorarioPropuestaEspecifica" />
    <Spinner
        android:id="@+id/spinActualizarHorarioPropuestaEspecifica"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLocalidadPropuestaEspecifica" />
    <Spinner
        android:id="@+id/spinActualizarLocalidadPropuestaEspecifica"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/btnActualizarPropuestaEspecifica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:backgroundTint="#00b4fc"
            android:onClick="ActualizarPropuestaEspecifica"
            />
        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:onClick="LimpiarTexto"/>
    </LinearLayout>
</LinearLayout>