<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView
            android:text="@string/IdOpcionCrud"
            android:paddingHorizontal="10dip"/>

        <EditText
            android:id="@+id/editIdOpcionCrud"
            android:inputType="text"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/descripcionOpcionCrud"
            android:paddingHorizontal="10dip"/>
        <EditText
            android:id="@+id/editDescripcionOpcionCrud"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarOpcionCrud"
            android:backgroundTint="#0a996f"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>